feat: add test & update doc
