# cmd/api/auth.go
@@ -7,6 +7,31 @@ import (
 	"time"
 )
 
+type RegisterUserPayload struct {
+	Username string `json:"username" validate:"required,min=3,lte=50"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8,lte=72"`
+}
+
+type UserWithToken struct {
+	store.User
+	Token string `json:"token"`
+}
+
+// Register user
+//
+//	@Summary		Register user
+//	@Description	register user
+//	@Tags			authentications
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		RegisterUserPayload	true	"Register user payload"
+//	@Success		201		{object}	UserWithToken
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		409		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authentications/users [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
 
@@ -27,13 +52,16 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		CreatedAt: time.Now(),
 	}
 
+	// TODO: Generate token
+	token := "test_token"
+
 	err := user.Password.Set(payload.Password)
 	if err != nil {
 		app.badRequestResponse(w, r, err)
 		return
 	}
 
-	if err := app.store.Users.Insert(r.Context(), &user); err != nil {
+	if err := app.store.Users.CreateAndInvite(r.Context(), token, &user); err != nil {
 		switch {
 		case errors.Is(err, store.ErrConflict):
 			app.conflictErrorResponse(w, r, err)
@@ -43,7 +71,12 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	if err := app.jsonResponse(w, http.StatusCreated, user); err != nil {
+	userWithToken := UserWithToken{
+		User:  user,
+		Token: token,
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
